style: Fix card title alignment

--- a/src/app/components/card/card.component.sass
+++ b/src/app/components/card/card.component.sass
@@ -37,10 +37,12 @@ $border-radius: 5px
 
 	.card-title
 		height: 35%
-		display: flex
-		align-items: center
+		margin-top: -4px
 		padding-left: 12px
 		padding-right: 12px
+
+		display: flex
+		align-items: center
 
 .card-delete
 	position: relative
